libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__binary.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Ok": {
    "data_decls": [
      {
        "name": "Bit",
        "variants": {
          "0": [],
          "1": []
        }
      }
    ],
    "rule_decls": [
      {
        "signature": {
          "name": "start",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "RuleRef": {
                    "rule": "odd-or-even-pair",
                    "args": []
                  }
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "odd-or-even-pair",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "RuleRef": {
                    "rule": "number",
                    "args": [
                      {
                        "Variable": [
                          "Bit",
                          "1"
                        ]
                      },
                      {
                        "Variable": [
                          "Bit",
                          "2"
                        ]
                      }
                    ]
                  }
                },
                {
                  "RuleRef": {
                    "rule": "number",
                    "args": [
                      {
                        "Variable": [
                          "Bit",
                          "3"
                        ]
                      },
                      {
                        "Variable": [
                          "Bit",
                          "2"
                        ]
                      }
                    ]
                  }
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "number",
          "parameter_types": [
            "Bit",
            "Bit"
          ]
        },
        "cases": [
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "0"
                },
                {
                  "Variant": "0"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "zero (even)"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "0"
                },
                {
                  "Variant": "1"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "one (odd)"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "1"
                },
                {
                  "Variant": "0"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "two (even)"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "1"
                },
                {
                  "Variant": "1"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "three (odd)"
                }
              ]
            ]
          }
        ]
      }
    ]
  }
}
